java8.spoofax3/test/statics/java/classes/methods/formalunbound.no.spt.bak
module classes/methods/formalunbound_no

language metaborg-java

test formalunbound [[

test;



// error: cannot find symbol

[B]
public class B {
    public void b(A a, B b) {}
}


]] analysis fails
   run javacFails to ""
